fixed module-context loading. readme updated with command for integration testing